# llm-serving-perf-lab

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
artifacts/m2-qwen-l40s-modal-chat-short-20260421-r3/: backend_config_resolved.json  metrics.parquet  report.md  responses.parquet  run.json  scorecard.json  system_info.json
artifacts/m2-qwen-l40s-modal-chat-short-20260423-r2/: backend_config_resolved.json  m3_report.md  m3_summary.md  metrics.parquet  report.md  requests.parquet  responses.parquet  run.json  scorecard.json  system_info.json
configs/backends/: sglang_pd_single_node.yaml  vllm_dev.yaml  vllm_modal_example.yaml  vllm_modal_m2_qwen_l40s.yaml
configs/experiments/: pd_sweep_v1.yaml
configs/policies/: cache_aware_v1.yaml
configs/thresholds/: default.yaml
configs/workloads/: bursty_chat.yaml  chat_short.yaml  chat_short_canary.yaml  context_long.yaml  mixed_short_long.yaml  prefix_reuse_heavy.yaml  sharegpt_like.yaml
docs/: 00-start-here.md  01-hiring-signal-charter.md  02-role-alignment.md  03-milestones.md  04-proof-artifacts.md  05-architecture.md  06-acceptance-tests.md  07-agent-work-orders.md  08-public-readme-template.md  09-technical-writeup-template.md  10-application-packaging.md  11-risk-register.md  12-reference-links.md  13-hermes-codex-handoff.md  14-signal-scorecard.md  15-hardware-investment-plan.md  16-modal-m2-runbook.md  17-job-mapping-2026.md  18-artifact-index-template.md  18-artifact-index.md  19-proof-readiness-checklist.md
kickoff/: first-message-to-agent.txt
lsp/: __init__.py  benchmark_runner.py  fake_run.py  m2_scaffolding.py
lsp/artifacts/: __init__.py  models.py  writer.py
lsp/backends/: __init__.py  base.py  vllm_adapter.py
lsp/cli/: main.py
lsp/config/: __init__.py  loader.py  models.py
lsp/metrics/: __init__.py  prometheus.py
lsp/profiling/: __init__.py
lsp/regression/: __init__.py
lsp/reporting/: __init__.py  m3.py
lsp/routing/: __init__.py
lsp/workloads/: __init__.py  generator.py  models.py
scripts/: modal_vllm_m2.py
tests/fixtures/: chat_short_alt_seed.yaml  invalid_backend_base_url_with_path.yaml  (+8 more)
(+30 files in other folders)
